Добавлены различные режимы. Улучшен интерфейс